2002-12-13  Dave Peticolas  <dave@krondo.com>

	* twisted/test/test_ftp.py: give client time to start up (fixes
	one test for gtk/gtk2 reactors)

	* twisted/protocols/ftp.py: ftp client in passive mode should not
	close data until both command and protocol are finished. (fixes
	one test in gtk/gtk2 reactors)

	* twisted/internet/gtkreactor.py: remove redundant code

	* twisted/internet/gtk2reactor.py: remove redundant code

	* twisted/internet/abstract.py: fix spelling in documentation

2002-12-12  Dave Peticolas  <dave@krondo.com>

	* twisted/test/test_jelly.py: test class serialization

	* twisted/spread/jelly.py: join module names with '.' in
	_unjelly_class

2002-12-12  Paul Swartz <z3p@twistedmatrix.com>

	* twisted/conch/pamauth.py: added, gives support for authentication
	using PAM.

	* twisted/conch/*: support for the keyboard-interactive authentication
	method which uses PAM.

2002-12-12  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/python/log.py: add setStdout, set logfile to NullFile by
	default. 

2002-12-11  Donovan Preston <dp@twistedmatrix.com>

	* Added new woven example, Hello World.

	* Updated woven howto to talk about Hello World. TODO: Finish refactoring
	woven quotes example, then write more advanced woven howtos on writing
	Widgets and InputHandlers.

2002-12-11  Paul Swartz <z3p@twistedmatix.com>

	* twisted/conch/*: enabled 'exec' on the server, disabled core dumps,
	and some fixes

2002-12-10  Paul Swartz  <z3p@twistedmatrix.com>

	* twisted/conch/*: many fixes to conch server, now works and can run
	as root.

	* twisted/conh/ssh/session.py: fix root exploit where a python shell was
	left acessable to anyone.

2002-12-10  Cory Dodt  <corydodt@yahoo.com>

	* t/scripts/postinstall.py: new.  Create shortcut icons on win32.

	* twisted-post-install.py: new.  Runs t/scripts/postinstall.py

	* setup.py: copy twisted-post-install.py during install_scripts

2002-12-09  Paul Swartz  <z3p@twistedmatrix.com>
