@@ -1,3 +1,7 @@
+2002-12-13  Moshe Zadka <moshez@twistedmatrix.com>
+
+	* twisted/web/client.py: add 301/302 support
+
 2002-12-13  Dave Peticolas  <dave@krondo.com>
 
 	* twisted/test/test_ftp.py: give client time to start up (fixes
